helm/charts/atlas-docs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atlas
  labels:
    name: atlas
    app.kubernetes.io/name: atlas
    app.kubernetes.io/part-of: atlas
